--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,16 +35,16 @@
       </div>
 
       <hr>
-
+      
       <div class="form-row text-center">
         <div class="col-6">
-          <button id="generate" class="btn btn-danger rounded-pill" style="height: 50px; width: 50%;">
+          <button id="generate" class="btn btn-danger rounded-pill" onclick="criteria.buttonpressed();" style="height: 50px; width: 50% ;">
             <h5>Generate Password</h5>
 
           </button>
         </div>
         <div class="col-6">
-          <button id="copy" class="btn btn-success rounded-pill" style="height: 50px; width: 50%;">
+          <button id="btnCopy" class="btn btn-success rounded-pill" style="height: 50px; width: 50%;" onclick="criteria.copyTextToPaste();" >
             <h5>Copy to Clipboard</h5>
 
           </button>
