--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     </div>
   </div>
-  <script type="text/javascript" src="main.js"></script> 
+  <script type="text/javascript" src="Develop/main.js"></script> 
 </body>
 
 </html>
